<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="search">inserisci un nome</string>
    <string name="icon_person">imagine di una persona</string>
    <string name="icon_share">icona per condividere</string>
    <string name="icon_connect">icona per accoppiarsi ad altri dispositivi</string>
    <string name="icon_disconnect">icona per disaccoppiarsi ad altri dispositivi</string>
    <string name="icon_message">icona per messaggiare</string>
    <string name="name">nome</string>
    <string-array name="gender_array">
        <item>Maschio</item>
        <item>Femmina</item>
        <item>Altro</item>
    </string-array>
    <string name="db_connection">"https://fitnesstracker-637f9-default-rtdb.europe-west1.firebasedatabase.app"</string>
    <string-array name="activity_array">
        <item>Passeggiata</item>
        <item>Corsa</item>
        <item>Guidare</item>
        <item>Stare fermo</item>
    </string-array>
    <string name="messageShared">ha condiviso con te \n lo storico delle sue attività,\n vuoi vederlo?</string>
    <string name="nothing">niente</string>
    <string name="ok">OK</string>
    <string name="places">Luoghi frequentati</string>
    <string name="noPeople">nessuna persona trovata nelle vicinanze 😢😢</string>
    <string name="successo">Successo</string>
    <string name="fallimento">non avvenuto con successo</string>
    <string name="error">errore</string>
    <string name="noActivities">non hai attività da condividere</string>
    <string name="connect_failed">accoppiamento col dispositivo non avvenuta con successo</string>
    <string name="connected">accoppiamento col dispositivo avvenuta con successo</string>
    <string name="request_sent">inviata richiesta</string>
    <string name="pairing_request">la richiesta di accoppiamento é stata inviata con successo</string>
    <string name="disconnected">disconnessione col dispositivo avvenuta con successo</string>
    <string name="info">info</string>
    <string name="still_connected">sei già accoppiato con un altro dispositivo</string>
    <string name="messaggio_inviato">il messaggio é stato inviato con successo</string>
    <string name="scan_devices">rileva dispositivi vicini a te</string>
    <string name="beDiscoverable">Diventa visibile agli altri</string>
    <string-array name="info_message_parts">
        <item><![CDATA[<br><br>]]></item>
        <item><![CDATA[<b>Bottone "%1$s"</b>]]></item>
        <item><![CDATA[<p>Questo bottone permette al tuo dispositivo di diventare visibile agli altri dispositivi nelle vicinanze che stanno cercando dispositivi Bluetooth. Quando premi questo bottone, il tuo dispositivo entra in modalità visibile, consentendo agli altri utenti di trovarti e connettersi con te.</p>]]></item>
        <item><![CDATA[<b>Bottone Ricerca Dispositivi</b>]]></item>
        <item><![CDATA[<p>Il bottone centrale, rappresentato dall\'icona del Bluetooth, avvia la ricerca di dispositivi Bluetooth nelle vicinanze. Quando premi questo bottone, il tuo dispositivo inizia a scansionare l\'area circostante alla ricerca di altri dispositivi Bluetooth visibili.</p>]]></item>
    </string-array>
    <string-array name="navNames">
        <item>nav_stats</item>
        <item>nav_home</item>
        <item>nav_users</item>
        <item>geofence</item>
    </string-array>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lastday">Dati relativi all\'ultimo giorno</string>
    <string name="lastweek">Dati relativi all\'ultima settimana</string>
    <string name="lastmonth">Dati relativi all\'ultimo mese</string>
    <string name="lastyear">Dati relativi all\'ultimo anno</string>
    <string name="email_non_valida">Formato email non valido</string>
    <string name="password_non_valida">La password deve contenere almeno: una lettera maiuscola, un numero e un carattere speciale</string>
    <string name="email_utilizzata">Email già utilizzata</string>
    <string name="username_utilizzato">Username già utilizzato</string>
    <string name="errore_registrazione">Errore durante la registrazione</string>
    <string name="registrazione_successo">Registrazione avvenuta con successo!</string>
    <string name="email_errata">L\'email inserita non è valida.</string>
    <string name="password_errata">Password errata</string>
    <string name="wrong_credentials">Credenziali non valide</string>
    <string name="user_not_found">Non esiste un utente con questa email.</string>
    <string name="not_valid_user">Utente non valido</string>
    <string name="errore_login">Errore durante il login</string>
    <string name="successo_login">Login avvenuto con successo</string>
    <string name="attendere">Richiesta inviata, attendere.</string>
    <string name="aggiungere_geofence">Come aggiungere una nuova geofence?</string>
    <string name="aggiungere_geofence_istruzioni">Per aggiungere una nuova geofence si può fare un doppio tap sulla posizione nella mappa in cui si vuole posizionare la geofence, oppure si può cercare un luogo tramite la barra di ricerca e,una volta trovato, cliccare sul bottone "aggiungi".</string>
    <string name="rimuovere_geofence">Come rimuovere una geofence?</string>
    <string name="rimuovere_geofence_istruzioni">Per rimuovere una geofence bisogna cliccare sul bottone "visualizza"  e poi cliccare sulla geofence che si vuole rimuovere.</string>
    <string name="data">Data:</string>
    <string name="ora_inizio">Ora inizio:</string>
    <string name="ora_fine">Ora fine:</string>
    <string name="utente_vicino">Utente nelle vicinanze</string>
    <string name="notifica_testo">C\'è un utente vicino a te: %1$s. Vuoi condividere i dati?</string>
    <string name="inserisci_luogo_cercare">Inserisci un luogo da cercare</string>
    <string name="nome_gf">Inserisci il nome della Geofence</string>
    <string name="nome_non_vuoto">Il nome della Geofence non può essere vuoto</string>
    <string name="cancel">Cancel</string>
    <string name="nessun_risultato">Nessun risultato trovato</string>
    <string name="gf_successo">Geofence aggiunta con successo</string>
    <string name="rimuovere_gf">Rimuovere Geofence</string>
    <string name="rim_domanda">Vuoi rimuovere questa geofence?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="welcome_message">Bentornato, %1$s</string>
    <string name="step_goal">Passi Goal</string>
    <string name="inserisci_numero">Inserisci un numero valido.</string>
    <string name="distance_goal">Distanza Goal</string>
    <string name="speed_limit">Limite Velocità</string>
    <string name="sei_qui">Sei qui</string>
    <string name="location_service">Location Service</string>
    <string name="track_background">La tua posizione sta venendo tracciata in background.</string>
    <string name="entered_geofence_title">Sei entrato in una geofence</string>
    <string name="geofence_entered_message">Sei entrato in: %1$s.</string>
    <string name="exited_geofence_title">Uscito</string>
    <string name="exited_geofence">Sei uscito da una geofence.</string>
    <string name="denied">Permesso negato</string>
    <string name="dati_salvati">Dati salvati con successo!</string>
    <string name="attività_breve">Attività troppo breve</string>
    <string name="attività_breve_testo">"L'attività dura meno di un minuto e non verrà salvata. Per favore, registra attività più lunghe.</string>
    <string name="step_counter_not_av">Sensore passi non disponibile.</string>
    <string name="distance_goal_format">Goal distanza: %.2f km</string>
    <string name="step_count_format">Numero passi: %1$d</string>
    <string name="distanza">Distanza: %.2f km</string>
    <string name="passo">Passo: %.2f min/km</string>
    <string name="gol_raggiunto">Gol raggiunto</string>
    <string name="tempo">Time: %02d:%02d</string>
    <string name="total_time">Tempo totale: %1$s</string>
    <string name="time_since_last_stand">Tempo dall\'ultima volta in piedi: %1$s</string>
    <string name="notification_title_stand">Ricorda di alzarti</string>
    <string name="notification_text_stand">È passato mezz\'ora dall\'ultima volta che ti sei alzato. Ricorda di fare una pausa e alzarti.</string>
    <string name="channel_name">Reminder Channel</string>
    <string name="channel_description">Channel for reminder notifications</string>
    <string name="max_speed">Velocità massima: %.2f km/h</string>
    <string name="speed">Velocità corrente: %.2f km/h</string>
    <string name="avg_speed">Velocità media: %.2f km/h</string>
    <string name="max_speed_recorded">Velocità massima: %.2f km/h</string>
    <string name="speeding_notification_title">Velocità eccessiva</string>
    <string name="speeding_notification_text">Stai superando la velocità impostata! Rallenta.</string>
    <string name="speed_channel_name">Speed Channel</string>
    <string name="speed_channel_description">Channel for speed limit notifications</string>
    <string name="dati_ultimo_giorno">Dati relativi all\'ultimo giorno</string>
    <string name="dati_ultima_settimana">Dati relativi all\'ultima settimana</string>
    <string name="dati_ultimo_mese">Dati relativi all\'ultimo mese</string>
    <string name="dati_ultimo_anno">Dati relativi all\'ultimo anno</string>
    <string name="no_data">Nessun dato disponibile</string>
    <string name="start_time">Inizo: %1$s</string>
    <string name="end_time">Fine: %1$s</string>
    <string name="date">Data: %s</string>
    <string name="activity_details">Activity Details: %s</string>
    <string name="search_hint">Cerca luogo</string>
    <string name="search_button">Cerca</string>
    <string name="add_geofence_button">Aggiungi GF</string>
    <string name="view_geofences_button">Visualizza GF</string>
    <string name="welcome_user">Bentornato, $nomeutente</string>
    <string name="select_activity">Scegli l\'attività da tracciare:</string>
    <string name="start_tracking">Inizia</string>
    <string name="activity_tracker">ActivityTracker</string>
    <string name="enter_email">Inserisci l\'email</string>
    <string name="enter_password">Inserisci la password</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="login">login</string>
    <string name="not_registered">Non sei ancora registrato? Registrati!</string>
    <string name="stop">Stop</string>
    <string name="reset_timer">Azzera Timer</string>
    <string name="gol_passi">Goal Passi: %1$d</string>
    <string name="attività">Attività</string>
    <string name="attività_svolta">Attività svolta</string>
    <string name="placename">Nome luogo</string>
    <string name="inserisci_gol_passi">Goal Passi</string>
    <string name="inserisci_gol_passi_hint">Inserisci numero passi</string>
    <string name="conferma">Conferma</string>
    <string name="distance_goal_dialog">Distanza da percorrere (km)</string>
    <string name="distance_goal_dialog_hint">Inserisci la distanza che vuoi percorrere</string>
    <string name="geofences">Geofences</string>
    <string name="limite_velocità">Limite velocità (km/h)</string>
    <string name="inserisci_limite_velocità">Inserisci il limite di velocità</string>
    <string name="filtra_rispetto_a">filtra rispetto a:</string>
    <string name="statistiche_attivita_svolte">Statistiche attività svolte:</string>
    <string name="dati_attivita_svolte">Dati attività svolte:</string>
    <string name="statistiche_geofences">Statistiche geofences:</string>
    <string name="day">Giorno</string>
    <string name="week">Settimana</string>
    <string name="month">Mese</string>
    <string name="year">Anno</string>
    <string name="registrati">Registrati</string>
    <string name="logo">logo</string>
</resources>