<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geofences"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aggiungere_geofence"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aggiungere_geofence_istruzioni"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rimuovere_geofence"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rimuovere_geofence_istruzioni"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        />


</LinearLayout>
