<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_goal_dialog"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/distanceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distance_goal_dialog_hint"
        android:inputType="numberDecimal"
        android:autofillHints="distanza" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conferma"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        />
</LinearLayout>
