<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sit Activity"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/centerImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/sit3"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:id="@+id/totalTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_time"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/lastStandTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_since_last_stand"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_timer"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:padding="@dimen/dimen_8"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:text="@string/stop"/>
    </LinearLayout>
</ScrollView>
