<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        tools:context=".SpeedActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Speed Activity"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/centerImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/spped2"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/speedTextView"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/speed"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/avgSpeedTextView"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/avg_speed"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/maxSpeedTextView"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/max_speed_recorded"
            android:textStyle="bold" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="Stop"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            />
    </LinearLayout>
</ScrollView>
